All converted to components, finished Gallery component, init Map componnent, testing out seznam Map component

--- a/prototype/resources/index.html
+++ b/prototype/resources/index.html
@@ -69,7 +69,7 @@
             <p>Prevence a léčba malých zvířat</p>
         </div>
     </section>
-    <section id="hours">
+    <section class="p-section" id="hours">
         <!-- Ordinační hodiny -->
         <div class="timetable">
             <h2>Ordinační hodiny</h2>
