--- a/web-components/index.html
+++ b/web-components/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
+    <meta name="author" content="Hynek Zemanec">
+    <meta name="theme-color" content="#000000">
+    <meta name="description" content="Veterinární ambulance, sídliště Máj, České Budějovice">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
@@ -21,41 +24,7 @@
         <img class="hero" src="/static/media/zahlavi.3d059e43.png" alt="">
     </section>
     <section id="hours">
-        <div class="timetable"><h2>Ordinační hodiny</h2>
-            <table class="timetable__week">
-                <tbody>
-                <tr>
-                    <th>Pondělí</th>
-                    <td rowspan="5">9:00 - 11:30<br>15:00 - 17:30</td>
-                </tr>
-                <tr>
-                    <th class="lead">Až</th>
-                </tr>
-                <tr>
-                    <th>Čtvrtek</th>
-                </tr>
-                </tbody>
-            </table>
-            <table class="timetable__week">
-                <tbody>
-                <tr>
-                    <th>Pátek</th>
-                    <td>9:00 - 11:30</td>
-                </tr>
-                </tbody>
-            </table>
-            <table class="timetable__week">
-                <tbody>
-                <tr>
-                    <th>Sobota</th>
-                    <td rowspan="2">Zavřeno</td>
-                </tr>
-                <tr>
-                    <th>Neděle</th>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+        <div class="timetable"><h2>Ordinační hodiny</h2><table class="timetable__week"><tbody><tr><th>Pondělí</th><td rowspan="5">9:00 - 11:30<br>15:00 - 17:30</td></tr><tr><th class="lead">Až</th></tr><tr><th>Čtvrtek</th></tr></tbody></table><table class="timetable__week"><tbody><tr><th>Pátek</th><td>9:00 - 11:30</td></tr></tbody></table><table class="timetable__week"><tbody><tr><th>Sobota</th><td rowspan="2">Zavřeno</td></tr><tr><th>Neděle</th></tr></tbody></table></div>
     </section>
     <section id="about">
         <article>
@@ -66,7 +35,7 @@
                     jako <strong>očkování</strong>, <strong>čipování</strong> nebo <strong>odčervení</strong>. Dále
                     poskytujeme <strong>laboratorní</strong> a <strong>mikroskopická</strong> vyšetření a
                     drobné<strong> chirurgické zákroky</strong>.</p></div>
-            <div class="about__img"><img src="/static/media/veterinar.259c999b.jpg"
+            <div class="about__img"><img src="/static/media/veterinar.d7233700.jpg"
                                          alt="Veterinářka Dana Zemancová"></div>
         </article>
     </section>
@@ -91,56 +60,55 @@
         <h3>Galerie</h3>
         <vet-gallery></vet-gallery>
     </section>
-    <vet-modal agree-btn-label="Souhlasím">
-        <article class="terms"><h2>Zásady ochrany osobních údajů</h2>
-            <p>Provozovatel webu: <a href="https://hynekzemanec.me/" target="_blank"
-                                     rel="noopener noreferrer">Hynek Zemanec</a> <br> IČO: 04393597<br>Se
-                sídlem Stará cesta 7, České Budějovice<br>Kontaktní e-mail: <a
-                        href="mailto:hynek@hynekzemanec.cz">hynek@hynekzemanec.cz</a></p>
-            <h3>Jak data sbíráme?</h3>
-            <p>Při odeslání formuláře je zpráva s Vaší emailovou adresou zaslána na speciálně zřízený email,
-                který spravuje MVDr. Dana Zemancová.</p>
-            <h3>Jaká data sbíráme a proč?</h3>
-            <p>Pro účely komunikace uchováváme následující data:</p>
-            <ul>
-                <li><strong>Vaše emailová adresa</strong></li>
-                <li><strong>Předmět Vaší zprávy</strong></li>
-                <li><strong>Obsah elektronické komunikace</strong></li>
-            </ul>
-            <p>Tato data sbíráme, abychom vám mohli odpovědět na dotazy či připomínky, které skrze formulář
-                zašlete. Tyto údaje nikde veřejně neuvádíme.</p>
-            <h3>Jak dlouho data uchováváme?</h3>
-            <p>Data jsou uchovávána po dobu nezbytně nutnou pro odpověď, maximálně však 1 rok.</p>
-            <h3>Kdo osobní údaje zpracovává?</h3>
-            <p>Zpracovatelem těchto údajů je:</p>
-            <p>Hynek Zemanec (IČO 04393597, se sídlem Stará cesta 7, České Budějovice), který provozuje
-                tento web. </p>
-            <p>MVDr. Dana Zemancová (IČO 60077361, se sídlem V. Volfa 45, 370 05 České Budějovice), která
-                odpovídá na Vaše dotazy.</p>
-            <h3>Jaká jsou má práva?</h3>
-            <ul>
-                <li><strong>Právo na odvolání souhlasu</strong> - Kdykoli můžete odvolat dříve udělený
-                    souhlas se zpracováním Vašich osobních údajů.
-                </li>
-                <li><strong>Právo na informace</strong> - Můžete se dotázat, jaké údaje zpracováváme, za
-                    jakým účelem, v jakém rozsahu, jak dlouho a kdo k nim má přístup.
-                </li>
-                <li><strong>Právo na opravu či výmaz</strong> - Kdykoli můžete požádat o opravu či výmaz
-                    Vašich osobních údajů.
-                </li>
-            </ul>
-            <p>Pro uplatnění kteréhokoliv práva zmíněného výše kontaktujte Provozovatele webu, a to
-                e-mailem, popř. písemně.</p>
-            <p class="center"><em>Tyto Zásady ochrany osobních údajů jsou platné a účinné od 1. 4.
-                2020.</em></p></article>
-    </vet-modal>
 </main>
+<vet-modal custom-element="vet-form" agree-btn-label="Souhlasím">
+    <article class="terms">
+        <h2>Zásady ochrany osobních údajů</h2>
+        <p>Provozovatel webu: <a href="https://hynekzemanec.me/" target="_blank"
+                                 rel="noopener noreferrer">Hynek Zemanec</a> <br> IČO: 04393597<br>Se
+            sídlem Stará cesta 7, České Budějovice<br>Kontaktní e-mail: <a
+                    href="mailto:hynek@hynekzemanec.cz">hynek@hynekzemanec.cz</a></p>
+        <h3>Jak data sbíráme?</h3>
+        <p>Při odeslání formuláře je zpráva s Vaší emailovou adresou zaslána na speciálně zřízený email,
+            který spravuje MVDr. Dana Zemancová.</p>
+        <h3>Jaká data sbíráme a proč?</h3>
+        <p>Pro účely komunikace uchováváme následující data:</p>
+        <ul>
+            <li><strong>Vaše emailová adresa</strong></li>
+            <li><strong>Předmět Vaší zprávy</strong></li>
+            <li><strong>Obsah elektronické komunikace</strong></li>
+        </ul>
+        <p>Tato data sbíráme, abychom vám mohli odpovědět na dotazy či připomínky, které skrze formulář
+            zašlete. Tyto údaje nikde veřejně neuvádíme.</p>
+        <h3>Jak dlouho data uchováváme?</h3>
+        <p>Data jsou uchovávána po dobu nezbytně nutnou pro odpověď, maximálně však 1 rok.</p>
+        <h3>Kdo osobní údaje zpracovává?</h3>
+        <p>Zpracovatelem těchto údajů je:</p>
+        <p>Hynek Zemanec (IČO 04393597, se sídlem Stará cesta 7, České Budějovice), který provozuje
+            tento web. </p>
+        <p>MVDr. Dana Zemancová (IČO 60077361, se sídlem V. Volfa 45, 370 05 České Budějovice), která
+            odpovídá na Vaše dotazy.</p>
+        <h3>Jaká jsou má práva?</h3>
+        <ul>
+            <li><strong>Právo na odvolání souhlasu</strong> - Kdykoli můžete odvolat dříve udělený
+                souhlas se zpracováním Vašich osobních údajů.
+            </li>
+            <li><strong>Právo na informace</strong> - Můžete se dotázat, jaké údaje zpracováváme, za
+                jakým účelem, v jakém rozsahu, jak dlouho a kdo k nim má přístup.
+            </li>
+            <li><strong>Právo na opravu či výmaz</strong> - Kdykoli můžete požádat o opravu či výmaz
+                Vašich osobních údajů.
+            </li>
+        </ul>
+        <p>Pro uplatnění kteréhokoliv práva zmíněného výše kontaktujte Provozovatele webu, a to
+            e-mailem, popř. písemně.</p>
+        <p class="center"><em>Tyto Zásady ochrany osobních údajů jsou platné a účinné od 1. 4.
+            2020.</em></p></article>
+</vet-modal>
 <footer id="end">
     <vet-map></vet-map>
     <p>© <span id="year">2020</span> with <a href="https://hynekzemanec.me/" class="author"><span
-            style="color: red;">♥</span> Hynek Zemanec</a></p></footer>
-
-
+            style="color: red;">♥</span> Hynek Zemanec</a></p>
+</footer>
 </body>
-
 </html>
