adding optimized images, adding functionality of Intersection Observer API in nav component, fixing performance issues

--- a/react/public/index.html
+++ b/react/public/index.html
@@ -27,7 +27,7 @@
     <title>Veterina na Máji - MVDr. Dana Zemancová</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Zapněte si prosím JavaScript v prohlížeči</noscript>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="subject" />
       <input type="email" name="email" />
