--- a/web-components/index.html
+++ b/web-components/index.html
@@ -21,13 +21,13 @@
             <h1 class="hero-description__header">Veterinární ambulance na máji</h1>
             <p class="hero-description__subheader">Prevence a léčba malých zvířat</p>
         </div>
-        <img class="hero" src="/static/media/zahlavi.3d059e43.png" alt="">
+        <picture class="hero"><source srcset="/static/media/zahlavi.df30f366.webp" type="image/webp"><img class="hero" src="/static/media/zahlavi.3d059e43.png" alt=""></picture>
     </section>
     <section id="hours">
-        <div class="timetable"><h2>Ordinační hodiny</h2><table class="timetable__week"><tbody><tr><th>Pondělí</th><td rowspan="5">9:00 - 11:30<br>15:00 - 17:30</td></tr><tr><th class="lead">Až</th></tr><tr><th>Čtvrtek</th></tr></tbody></table><table class="timetable__week"><tbody><tr><th>Pátek</th><td>9:00 - 11:30</td></tr></tbody></table><table class="timetable__week"><tbody><tr><th>Sobota</th><td rowspan="2">Zavřeno</td></tr><tr><th>Neděle</th></tr></tbody></table></div>
+        <div class="timetable animate"><h2>Ordinační hodiny</h2><table class="timetable__week"><tbody><tr><th>Pondělí</th><td rowspan="5">9:00 - 11:30<br>15:00 - 17:30</td></tr><tr><th class="lead">Až</th></tr><tr><th>Čtvrtek</th></tr></tbody></table><table class="timetable__week"><tbody><tr><th>Pátek</th><td>9:00 - 11:30</td></tr></tbody></table><table class="timetable__week"><tbody><tr><th>Sobota</th><td rowspan="2">Zavřeno</td></tr><tr><th>Neděle</th></tr></tbody></table></div>
     </section>
     <section id="about">
-        <article>
+        <article class="animate">
             <div>
                 <h2>MVDr. Dana Zemancová</h2>
                 <p>Již od roku 1995 poskytuje odbornou preventivní péči a léčbu <strong>psů</strong>,<strong>
@@ -35,14 +35,15 @@
                     jako <strong>očkování</strong>, <strong>čipování</strong> nebo <strong>odčervení</strong>. Dále
                     poskytujeme <strong>laboratorní</strong> a <strong>mikroskopická</strong> vyšetření a
                     drobné<strong> chirurgické zákroky</strong>.</p></div>
-            <div class="about__img"><img src="/static/media/veterinar.d7233700.jpg"
-                                         alt="Veterinářka Dana Zemancová"></div>
+            <div class="about__img">
+                <picture><source srcset="/static/media/veterinar.0d6361f1.webp" type="image/webp"><img src="/static/media/veterinar.fc71c485.jpg" alt="Veterinářka Dana Zemancová"></picture>
+            </div>
         </article>
     </section>
     <section id="contact">
         <div class="contact-grid">
             <h2 class="contact-header">Kontakt</h2>
-            <div class="contact-info">
+            <div class="contact-info animate">
                 <a class="link contact-info__link" href="tel:+420385511793">
                     <img
                             class="svg-icon" src="/static/media/phone.fa0965d0.svg"
