--- a/web-components/stencil/src/index.html
+++ b/web-components/stencil/src/index.html
@@ -22,7 +22,8 @@
       na máji</h1>
       <p class="hero-description__subheader" style="transform: translate(0px, 0px); opacity: 1;">Prevence a
         léčba malých zvířat</p></div>
-    <img class="hero" src="/static/media/zahlavi.3d059e43.png" alt=""></section>
+    <picture class="hero"><source srcset="/static/media/zahlavi.df30f366.webp" type="image/webp"><img class="hero" src="/static/media/zahlavi.3d059e43.png" alt=""></picture>
+  </section>
   <section id="hours">
     <div class="timetable"><h2>Ordinační hodiny</h2>
       <table class="timetable__week">
